@@ -1,6 +1,8 @@
-<h3>New in version 3.1</h3>
+<h3>New in version 3.2</h3>
 <ul>
     <li>Updates from the 2020 Legislative Session</li>
+    <li>New Sharing Feature</li>
+    
 </ul>
 <div id="update-action">
     <a class="btn btn-default update-dismiss">Dismiss</a> 
